--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "digdata",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Some utility for digging data from a complex object or array.",
   "main": "index.js",
   "scripts": {
@@ -8,6 +8,7 @@
     "start": "node index.js",
     "test": "jest --coverage"
   },
+  "homepage": "https://github.com/Oskang09/digdata#readme",
   "author": "Oskang09",
   "license": "ISC",
   "devDependencies": {
