--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -6,14 +6,14 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [8.x]
+        node-version: [4]
 
     steps:
     - uses: actions/checkout@v1
-    - name: Use Node.js ${ matrix.node-version }
+    - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
-        node-version: ${ matrix.node-version }
+        node-version: ${{ matrix.node-version }}
     - name: Installation and running tests
       run: |
         npm install
