--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
 registry=https://npm.pkg.github.com/Oskang09
 @oskang09:registry=https://npm.pkg.github.com/
-//registry.npmjs.org/:_authToken=//registry.npmjs.org/:_authToken=3a24aab4ecd5e691a57f0691bb524ea16b960727
+//registry.npmjs.org/:_authToken=//registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}
