--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@oskang09/digdata",
+  "name": "digdata",
   "version": "1.0.10",
   "description": "Some utility for digging data from a complex object or array.",
   "main": "index.js",
