--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -15,6 +15,7 @@ jobs:
         run: |
           npm install
           npm test
+          npm config set //registry.npmjs.org/:_authToken=${{secrets.GPR_TOKEN}}
           npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
