--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -12,7 +12,8 @@ jobs:
           registry-url: "https://registry.npmjs.org/"
       - name: Publish to NPM
         run: |
-          npm publish --access public
+          npm whoami
+          npm publish --access=public
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
 
