--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           node-version: 6
           registry-url: "https://registry.npmjs.org/"
-          scope: "@oskang09"
+          scope: oskang09
       - name: Publish to NPM
         run: |
           npm install
@@ -36,7 +36,7 @@ jobs:
         with:
           node-version: 6
           registry-url: https://npm.pkg.github.com/
-          scope: "@oskang09"
+          scope: oskang09
       - name: Publish to GPR
         run: |
           npm install
