fix: error when structure is falsy value

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Oskang09",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^25.1.0"
+    "jest": "^25.1.0",
+    "nodemon": "^2.0.2"
   }
 }
