--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "digdata",
-  "version": "1.0.16",
+  "version": "1.0.17",
   "description": "Some utility for digging data from a complex object or array.",
-  "main": "lib/index.js",
+  "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
-    "test": "jest --coverage",
-    "build": "babel -d lib src"
+    "test": "jest --coverage"
   },
   "homepage": "https://github.com/Oskang09/digdata#readme",
   "repository": {
@@ -17,9 +16,6 @@
   "author": "Oskang09",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.0",
     "jest": "^25.1.0",
     "nodemon": "^2.0.2"
   }
