--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "digdata",
   "version": "1.1.1",
   "description": "lightweight zero dependency object data utility",
-  "main": "index.js",
+  "main": "index.min.js",
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
